frontend/src/App.css
/* ... */
@keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

#chat button{
  color: #44bc86;
  background-color: transparent;
  border: none;
}

.settings-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 1rem 2rem;
  padding: 2rem;
  color: white;
}

#settings input {
  width: 4em;
  min-width: 4em;
  text-align: center;
}

#settings input[type="number"]::-webkit-inner-spin-button,
#settings input[type="number"]::-webkit-outer-spin-button {
  opacity: 1;
}

#settings .button-container {
  text-align: center;
}

#settings .button {
  margin-bottom: 1rem;
}

#settings .button.disabled {
  background-color: hsl(0deg 0% 73%);
  color: rgba(16, 16, 16, 0.3);
  margin-top: 1rem;
  height: 2.5rem;
  margin-right: 1rem;
}

#settings .hint {
  font-size: 0.9em;
}

.unitSelection-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  margin: 1rem 2rem;
  padding: 2rem;
}

.taskForceSelector-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 7vh 0 3vh 0;
}

.taskForceSelector-unit {
  width: 5vw;
  margin: 0 2.5vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100%;
}

.error {
  color: red;
  font-size: 1.2em;
  margin: 1rem 0;
  min-height: 1.5em;
}

.unit-box {
  background-color: white;
  width: 150%;
  padding: 0.5rem 0;
}

.unit-box > .unit > .unit-info {
  width: 160%;
}

.unitPlacement {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0.5rem 2rem;
  margin-bottom: 1.5rem;
  width: 100%;
}

.unitPlacement > .title {
  position: relative;
  background-color: white;
  padding: 0.5rem 2rem;
  font-size: 1em;
}

.unitPlacement-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 5rem;
}

.unitPlacement-box {
  position: relative;
  width: 4rem;
  height: 4rem;
  margin: 0 0.5rem;
  padding: 0.2rem;
  background-color: white;
}

.unitPlacement-box > .unit {
  opacity: 0.5;
}

.unitPlacement-box > .unit > .unit-sprite {
  width: 120%;
}

.unitPlacement-box.selected {
  opacity: 1;
  box-shadow: 0px 0px 0px 0.7rem green;
}

@media only screen and (max-width: 800px) {
  .unitPlacement-box.selected {
    box-shadow: 0px 0px 0px 0.3rem green;
  }
}

.unitPlacement-box.selected > .unit {
  opacity: 1;
}

.main {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 80%;
}

.main.placement-main {
  flex-direction: column;
}

.teamPanel-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 3rem;
  position: relative;
  z-index: 0;
}

.teamPanel {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  align-items: center;
  width: 100%;
  /* background-color: gray; */
}

.teamPanel > .teamPanel-box {
  margin: 0.5rem 0;
  width: 80%;
  z-index: 3;
  display: flex;
  justify-content: center;
  align-items: center;
}

.unitPanel-background {
  position: absolute;
  z-index: -1;
  width: 100%;
  padding-top: 100%;
  background-color: white;
  outline: 0.5rem solid;
}

.unitPanel-foreground {
  position: absolute;
  width: 100%;
  padding-top: 100%;
  z-index: 200;
  background-color: rgba(10, 10, 10, 0.5);
}

.unitPanel-foreground:before,
.unitPanel-foreground:after {
  position: absolute;
  left: 2.2rem;
  top: 0.9rem;
  content: " ";
  height: 3rem;
  width: 0.5rem;
  background-color: red;
  z-index: 200;
}
.unitPanel-foreground:before {
  transform: rotate(-45deg);
}

.unitPanel-foreground:after {
  transform: rotate(45deg);
}

.unitPanel-background.p1 {
  outline-color: #dce2ff;
}

.unitPanel-background.p2 {
  outline-color: #ffdcdc;
}

.unitPanel-background.selected.p1 {
  background-color: aquamarine;
}

.unitPanel-background.selected.p2 {
  background-color: gold;
}

.game-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.board {
  position: relative;
  width: 50%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: #c3ffbd;
  box-shadow: 0px 0px 0px 1.5rem white;
}

@media only screen and (max-width: 800px) {
  .board {
    box-shadow: 0px 0px 0px 0.8rem white;
  }
}

.main.fight {
  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  perspective: 1000px;
}

@keyframes shake {
  10%,
  90% {
    transform: translate3d(-1px, 0, 0);
  }

  20%,
  80% {
    transform: translate3d(2px, 0, 0);
  }

  30%,
  50%,
  70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%,
  60% {
    transform: translate3d(4px, 0, 0);
  }
}

.panel {
  position: fixed;
  transform: translate(-50%, 0);
  top: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.undo-button {
  margin-top: 1rem;
  height: 2.5rem;
  background-color: lightslategrey;
  color: white;
}

.fight-button{
    margin-top: 1rem;
    height: 2.5rem;
    margin-right: 1rem;
}

.fight-button.inactive {
  background-color: grey;
  color: lightgray;
}

.fight-button.confirm {
  background-color: #06a12f;
  color: white;
}

.square {
  position: relative;
  z-index: 0;
  width: 100%;
  height: 0;
  padding-top: 91%;
  /* height: 1.8rem;
  width: 1.8rem; */
  border: 0.06rem solid #f1fff0;
  font-size: 0.7rem;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
  transform: scale(1) rotate(0deg);
  opacity: 1;
}

.board.p1 > .square-container > .square > .square-inside.opponent-reach-fill {
  background-color: rgba(255, 217, 0, 0.1);
}

.board.p2 > .square-container > .square > .square-inside.opponent-reach-fill {
  background-color: rgba(93, 254, 200, 0.15);
}
/* ... */

